--- a/main.html
+++ b/main.html
@@ -11,11 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
 </head>
-<body>
+<body ontouchstart="void(0)">
     <section id="game-container">
         <div id="score">Score : 0</div>
         <div id="lives">Vies : 4</div>
-        <div id="game-area"></div>
+        <div id="game-area">
+            <img id="player-img" src="images/player.png" alt="Player">
+        </div>
     </section>
 
     <script src="script.js"></script>
