--- a/lost-page.html
+++ b/lost-page.html
@@ -20,12 +20,11 @@
     <main id="main-lost">
         <strong>Felicitation</strong>
 
-        <p>Aidez vos amis célibataires qui s'ennuient en partageant le lien du jeu <a href=""></a></p>
+        <p>Aidez vos amis célibataires qui s'ennuient en partageant le lien du jeu <a href="break-heart2.onrender.com">share</a></p>
     </main>
     <footer>
         <p> Fait avec <img src="./images/red-heart.png" alt="coeur" width="20" height="20"> par Stefy </p>
-        <a href="">lien Github</a>
-        <a href="">Un projet ? Ecrivez moi</a>
+        <a href="https://wa.me/+237659342869?text='good game'"><img src="./images/whatsapp.png" alt="Write us" width="30" height="30"></a>
     </footer>
 
 <script>
