--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     </main>
     <footer>
         <p> Fait avec <img src="./images/red-heart.png" alt="coeur" width="20" height="20"> par Stefy </p>
-        <a href="">lien Github</a>
 
-        <a href="">Un projet ? Ecrivez moi</a>
+        <a href="https://wa.me/+237659342869?text='good game'"><img src="./images/whatsapp.png" alt="Write us" width="30" height="30"></a>
     </footer>
 
 </body>
